# azure_smtp_relay

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docker/: Dockerfile  README.md  entrypoint.sh  requirements.txt
release_notes/: v1.0.0.md  v1.0.1.md  v1.0.10.md  v1.0.11.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md
src/azure_smtp_relay/: __init__.py  __main__.py  address_list.py  config.py  handler.py  relay.py  toml_config_mgr.py
tests/: relay_test.py
